SWB4/swb/SWBNLP/src/org/semanticwb/nlp/analysis/SimpleCSSParser.java
package org.semanticwb.nlp.analysis;

/**
 *
 * @author hasdai
 */
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g 2009-11-04 10:26:50

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class SimpleCSSParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "HEXCHAR", "NONASCII", "UNICODE", "ESCAPE", "NMSTART", "NMCHAR", "NAME", "URL", "A", "B", "C", "D", "E", "F", "G", "H", "I", "J", "K", "L", "M", "N", "O", "P", "Q", "R", "S", "T", "U", "V", "W", "X", "Y", "Z", "COMMENT", "CDO", "CDC", "INCLUDES", "DASHMATCH", "GREATER", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "OPEQ", "SEMI", "COLON", "SOLIDUS", "MINUS", "PLUS", "STAR", "LPAREN", "RPAREN", "COMMA", "DOT", "INVALID", "STRING", "IDENT", "HASH", "IMPORT_SYM", "PAGE_SYM", "MEDIA_SYM", "CHARSET_SYM", "WS", "IMPORTANT_SYM", "EMS", "EXS", "LENGTH", "ANGLE", "TIME", "FREQ", "DIMENSION", "PERCENTAGE", "NUMBER", "URI", "NL", "STYLESHEET", "CLASS", "SELECTOR", "STYLE", "HTMLELEMENT", "ELEMENTS", "VAL", "EXPR"
    };
    public static final int COMMA=57;
    public static final int IMPORTANT_SYM=68;
    public static final int PAGE_SYM=64;
    public static final int O=26;
    public static final int MINUS=52;
    public static final int HASH=62;
    public static final int DASHMATCH=42;
    public static final int EXPR=87;
    public static final int P=27;
    public static final int SELECTOR=82;
    public static final int NUMBER=77;
    public static final int V=33;
    public static final int I=20;
    public static final int ELEMENTS=85;
    public static final int INVALID=59;
    public static final int LBRACKET=46;
    public static final int F=17;
    public static final int INCLUDES=41;
    public static final int U=32;
    public static final int URL=11;
    public static final int STYLESHEET=80;
    public static final int URI=78;
    public static final int EMS=69;
    public static final int LBRACE=44;
    public static final int DOT=58;
    public static final int RBRACE=45;
    public static final int S=30;
    public static final int D=15;
    public static final int NONASCII=5;
    public static final int VAL=86;
    public static final int NL=79;
    public static final int ANGLE=72;
    public static final int K=22;
    public static final int R=29;
    public static final int HTMLELEMENT=84;
    public static final int UNICODE=6;
    public static final int IMPORT_SYM=63;
    public static final int B=13;
    public static final int Q=28;
    public static final int RBRACKET=47;
    public static final int ESCAPE=7;
    public static final int RPAREN=56;
    public static final int LPAREN=55;
    public static final int M=24;
    public static final int GREATER=43;
    public static final int PLUS=53;
    public static final int NMCHAR=9;
    public static final int T=31;
    public static final int W=34;
    public static final int IDENT=61;
    public static final int H=19;
    public static final int WS=67;
    public static final int EXS=70;
    public static final int LENGTH=71;
    public static final int G=18;
    public static final int STRING=60;
    public static final int COMMENT=38;
    public static final int A=12;
    public static final int OPEQ=48;
    public static final int CDC=40;
    public static final int N=25;
    public static final int X=35;
    public static final int Z=37;
    public static final int SEMI=49;
    public static final int NMSTART=8;
    public static final int CLASS=81;
    public static final int TIME=73;
    public static final int DIMENSION=75;
    public static final int C=14;
    public static final int STYLE=83;
    public static final int HEXCHAR=4;
    public static final int EOF=-1;
    public static final int L=23;
    public static final int COLON=50;
    public static final int CDO=39;
    public static final int SOLIDUS=51;
    public static final int STAR=54;
    public static final int Y=36;
    public static final int J=21;
    public static final int MEDIA_SYM=65;
    public static final int NAME=10;
    public static final int CHARSET_SYM=66;
    public static final int PERCENTAGE=76;
    public static final int FREQ=74;
    public static final int E=16;

    // delegates
    // delegators


        public SimpleCSSParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public SimpleCSSParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);

        }

    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return SimpleCSSParser.tokenNames; }
    public String getGrammarFileName() { return "/home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g"; }


    	private int errCount = 0;

    	/*
    	 * Overrides default displayRecognitionError method in ANTLR to count total
    	 * recognition errors.
    	 */
    	public void displayRecognitionError(String[] tokenNames, RecognitionException e) {
            	errCount++;
        	}

        	/*
        	 *  Gets the number of total recognition errors.
        	 */
        	public int getErrorCount() {
        		return errCount;
        	}


    public static class styleSheet_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "styleSheet"
    // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:38:1: styleSheet : bodyList EOF -> ^( STYLESHEET bodyList ) ;
    public final SimpleCSSParser.styleSheet_return styleSheet() throws RecognitionException {
        SimpleCSSParser.styleSheet_return retval = new SimpleCSSParser.styleSheet_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EOF2=null;
        SimpleCSSParser.bodyList_return bodyList1 = null;


        Object EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_bodyList=new RewriteRuleSubtreeStream(adaptor,"rule bodyList");
        try {
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:39:1: ( bodyList EOF -> ^( STYLESHEET bodyList ) )
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:39:3: bodyList EOF
            {
            pushFollow(FOLLOW_bodyList_in_styleSheet88);
            bodyList1=bodyList();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_bodyList.add(bodyList1.getTree());
            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_styleSheet90); if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_EOF.add(EOF2);



            // AST REWRITE
            // elements: bodyList
            // token labels:
            // rule labels: retval
            // token list labels:
            // rule list labels:
            // wildcard labels:
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 39:16: -> ^( STYLESHEET bodyList )
            {
                // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:39:19: ^( STYLESHEET bodyList )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(STYLESHEET, "STYLESHEET"), root_1);

                adaptor.addChild(root_1, stream_bodyList.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "styleSheet"

    public static class bodyList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "bodyList"
    // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:43:1: bodyList : ( bodyset )* ;
    public final SimpleCSSParser.bodyList_return bodyList() throws RecognitionException {
        SimpleCSSParser.bodyList_return retval = new SimpleCSSParser.bodyList_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        SimpleCSSParser.bodyset_return bodyset3 = null;



        try {
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:44:1: ( ( bodyset )* )
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:44:3: ( bodyset )*
            {
            root_0 = (Object)adaptor.nil();

            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:44:3: ( bodyset )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==DOT) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:0:0: bodyset
            	    {
            	    pushFollow(FOLLOW_bodyset_in_bodyList108);
            	    bodyset3=bodyset();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, bodyset3.getTree());

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "bodyList"

    public static class bodyset_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "bodyset"
    // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:48:1: bodyset : ruleSet ;
    public final SimpleCSSParser.bodyset_return bodyset() throws RecognitionException {
        SimpleCSSParser.bodyset_return retval = new SimpleCSSParser.bodyset_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        SimpleCSSParser.ruleSet_return ruleSet4 = null;



        try {
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:49:1: ( ruleSet )
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:49:4: ruleSet
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_ruleSet_in_bodyset120);
            ruleSet4=ruleSet();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, ruleSet4.getTree());

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "bodyset"

    public static class ruleSet_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "ruleSet"
    // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:55:1: ruleSet : selector ( COMMA selector )* LBRACE declaration SEMI ( declaration SEMI )* RBRACE -> ^( SELECTOR ^( ELEMENTS selector ) ^( STYLE ( declaration )+ ) ) ;
    public final SimpleCSSParser.ruleSet_return ruleSet() throws RecognitionException {
        SimpleCSSParser.ruleSet_return retval = new SimpleCSSParser.ruleSet_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token COMMA6=null;
        Token LBRACE8=null;
        Token SEMI10=null;
        Token SEMI12=null;
        Token RBRACE13=null;
        SimpleCSSParser.selector_return selector5 = null;

        SimpleCSSParser.selector_return selector7 = null;

        SimpleCSSParser.declaration_return declaration9 = null;

        SimpleCSSParser.declaration_return declaration11 = null;


        Object COMMA6_tree=null;
        Object LBRACE8_tree=null;
        Object SEMI10_tree=null;
        Object SEMI12_tree=null;
        Object RBRACE13_tree=null;
        RewriteRuleTokenStream stream_COMMA=new RewriteRuleTokenStream(adaptor,"token COMMA");
        RewriteRuleTokenStream stream_SEMI=new RewriteRuleTokenStream(adaptor,"token SEMI");
        RewriteRuleTokenStream stream_RBRACE=new RewriteRuleTokenStream(adaptor,"token RBRACE");
        RewriteRuleTokenStream stream_LBRACE=new RewriteRuleTokenStream(adaptor,"token LBRACE");
        RewriteRuleSubtreeStream stream_selector=new RewriteRuleSubtreeStream(adaptor,"rule selector");
        RewriteRuleSubtreeStream stream_declaration=new RewriteRuleSubtreeStream(adaptor,"rule declaration");
        try {
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:56:1: ( selector ( COMMA selector )* LBRACE declaration SEMI ( declaration SEMI )* RBRACE -> ^( SELECTOR ^( ELEMENTS selector ) ^( STYLE ( declaration )+ ) ) )
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:56:3: selector ( COMMA selector )* LBRACE declaration SEMI ( declaration SEMI )* RBRACE
            {
            pushFollow(FOLLOW_selector_in_ruleSet133);
            selector5=selector();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_selector.add(selector5.getTree());
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:56:12: ( COMMA selector )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==COMMA) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:56:13: COMMA selector
            	    {
            	    COMMA6=(Token)match(input,COMMA,FOLLOW_COMMA_in_ruleSet136); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_COMMA.add(COMMA6);

            	    pushFollow(FOLLOW_selector_in_ruleSet138);
            	    selector7=selector();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_selector.add(selector7.getTree());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            LBRACE8=(Token)match(input,LBRACE,FOLLOW_LBRACE_in_ruleSet143); if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_LBRACE.add(LBRACE8);

            pushFollow(FOLLOW_declaration_in_ruleSet147);
            declaration9=declaration();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_declaration.add(declaration9.getTree());
            SEMI10=(Token)match(input,SEMI,FOLLOW_SEMI_in_ruleSet149); if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_SEMI.add(SEMI10);

            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:58:20: ( declaration SEMI )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==IDENT) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:58:21: declaration SEMI
            	    {
            	    pushFollow(FOLLOW_declaration_in_ruleSet152);
            	    declaration11=declaration();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_declaration.add(declaration11.getTree());
            	    SEMI12=(Token)match(input,SEMI,FOLLOW_SEMI_in_ruleSet154); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_SEMI.add(SEMI12);


            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            RBRACE13=(Token)match(input,RBRACE,FOLLOW_RBRACE_in_ruleSet159); if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_RBRACE.add(RBRACE13);



            // AST REWRITE
            // elements: selector, declaration
            // token labels:
            // rule labels: retval
            // token list labels:
            // rule list labels:
            // wildcard labels:
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 59:9: -> ^( SELECTOR ^( ELEMENTS selector ) ^( STYLE ( declaration )+ ) )
            {
                // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:59:12: ^( SELECTOR ^( ELEMENTS selector ) ^( STYLE ( declaration )+ ) )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(SELECTOR, "SELECTOR"), root_1);

                // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:59:23: ^( ELEMENTS selector )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(ELEMENTS, "ELEMENTS"), root_2);

                adaptor.addChild(root_2, stream_selector.nextTree());

                adaptor.addChild(root_1, root_2);
                }
                // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:59:44: ^( STYLE ( declaration )+ )
                {
                Object root_2 = (Object)adaptor.nil();
                root_2 = (Object)adaptor.becomeRoot((Object)adaptor.create(STYLE, "STYLE"), root_2);

                if ( !(stream_declaration.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_declaration.hasNext() ) {
                    adaptor.addChild(root_2, stream_declaration.nextTree());

                }
                stream_declaration.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "ruleSet"

    public static class selector_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "selector"
    // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:63:1: selector : simpleSelector ( combinator simpleSelector )* ;
    public final SimpleCSSParser.selector_return selector() throws RecognitionException {
        SimpleCSSParser.selector_return retval = new SimpleCSSParser.selector_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        SimpleCSSParser.simpleSelector_return simpleSelector14 = null;

        SimpleCSSParser.combinator_return combinator15 = null;

        SimpleCSSParser.simpleSelector_return simpleSelector16 = null;



        try {
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:64:1: ( simpleSelector ( combinator simpleSelector )* )
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:64:3: simpleSelector ( combinator simpleSelector )*
            {
            root_0 = (Object)adaptor.nil();

            pushFollow(FOLLOW_simpleSelector_in_selector189);
            simpleSelector14=simpleSelector();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, simpleSelector14.getTree());
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:64:18: ( combinator simpleSelector )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==GREATER||LA4_0==PLUS||LA4_0==DOT) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:64:19: combinator simpleSelector
            	    {
            	    pushFollow(FOLLOW_combinator_in_selector192);
            	    combinator15=combinator();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, combinator15.getTree());
            	    pushFollow(FOLLOW_simpleSelector_in_selector194);
            	    simpleSelector16=simpleSelector();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, simpleSelector16.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "selector"

    public static class combinator_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "combinator"
    // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:67:1: combinator : ( PLUS | GREATER | );
    public final SimpleCSSParser.combinator_return combinator() throws RecognitionException {
        SimpleCSSParser.combinator_return retval = new SimpleCSSParser.combinator_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token PLUS17=null;
        Token GREATER18=null;

        Object PLUS17_tree=null;
        Object GREATER18_tree=null;

        try {
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:68:1: ( PLUS | GREATER | )
            int alt5=3;
            switch ( input.LA(1) ) {
            case PLUS:
                {
                alt5=1;
                }
                break;
            case GREATER:
                {
                alt5=2;
                }
                break;
            case DOT:
                {
                alt5=3;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }

            switch (alt5) {
                case 1 :
                    // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:68:3: PLUS
                    {
                    root_0 = (Object)adaptor.nil();

                    PLUS17=(Token)match(input,PLUS,FOLLOW_PLUS_in_combinator207); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    PLUS17_tree = (Object)adaptor.create(PLUS17);
                    adaptor.addChild(root_0, PLUS17_tree);
                    }

                    }
                    break;
                case 2 :
                    // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:69:3: GREATER
                    {
                    root_0 = (Object)adaptor.nil();

                    GREATER18=(Token)match(input,GREATER,FOLLOW_GREATER_in_combinator211); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    GREATER18_tree = (Object)adaptor.create(GREATER18);
                    adaptor.addChild(root_0, GREATER18_tree);
                    }

                    }
                    break;
                case 3 :
                    // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:71:2:
                    {
                    root_0 = (Object)adaptor.nil();

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "combinator"

    public static class simpleSelector_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "simpleSelector"
    // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:76:1: simpleSelector : cssClass -> ^( CLASS cssClass ) ;
    public final SimpleCSSParser.simpleSelector_return simpleSelector() throws RecognitionException {
        SimpleCSSParser.simpleSelector_return retval = new SimpleCSSParser.simpleSelector_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        SimpleCSSParser.cssClass_return cssClass19 = null;


        RewriteRuleSubtreeStream stream_cssClass=new RewriteRuleSubtreeStream(adaptor,"rule cssClass");
        try {
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:77:1: ( cssClass -> ^( CLASS cssClass ) )
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:78:2: cssClass
            {
            pushFollow(FOLLOW_cssClass_in_simpleSelector229);
            cssClass19=cssClass();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_cssClass.add(cssClass19.getTree());


            // AST REWRITE
            // elements: cssClass
            // token labels:
            // rule labels: retval
            // token list labels:
            // rule list labels:
            // wildcard labels:
            if ( state.backtracking==0 ) {
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 78:11: -> ^( CLASS cssClass )
            {
                // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:78:14: ^( CLASS cssClass )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(CLASS, "CLASS"), root_1);

                adaptor.addChild(root_1, stream_cssClass.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }

            retval.tree = root_0;}
            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "simpleSelector"

    public static class elementName_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "elementName"
    // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:82:1: elementName : IDENT ;
    public final SimpleCSSParser.elementName_return elementName() throws RecognitionException {
        SimpleCSSParser.elementName_return retval = new SimpleCSSParser.elementName_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token IDENT20=null;

        Object IDENT20_tree=null;

        try {
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:83:1: ( IDENT )
            // /home/hasdai/Documentos/INFOTEC/SimpleCSSParser.g:83:3: IDENT
            {
            root_0 = (Object)adaptor.nil();

            IDENT20=(Token)match(input,IDENT,FOLLOW_IDENT_in_elementName247); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            IDENT20_tree = (Object)adaptor.create(IDENT20);
            adaptor.addChild(root_0, IDENT20_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "elementName"

    public static class cssClass_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };
